crates/uitest/fixtures/ty/trait_bound/coinductive.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/trait_bound/coinductive.fe
---
error[8-0032]: type annotation is needed
   ┌─ coinductive.fe:35:9
   │
35 │     let v = Vec::new()
   │         ^
   │         │
   │         type annotation is needed
   │         consider giving `: Vec<_>` here
